unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Standard_format_Testing_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Standard_format_Testing_Start_Date_Time__c</fullName>
    <formula>IF( NOT(ISBLANK(Testing_Session_Start_Date_Time__c)),

CASE(MONTH(DATEVALUE(Testing_Session_Start_Date_Time__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;ERROR&quot;
)
&amp;&quot; &quot; &amp;
TEXT(DAY(DATEVALUE(Testing_Session_Start_Date_Time__c))) &amp; &quot;, &quot; &amp;
TEXT(YEAR(DATEVALUE(Testing_Session_Start_Date_Time__c))) &amp;&quot; &quot;&amp; 
TEXT(HOUR(TIMEVALUE(Testing_Session_Start_Date_Time__c))) &amp; &quot;:&quot; &amp;

IF(TEXT( MINUTE(TIMEVALUE(Testing_Session_Start_Date_Time__c))) ==&quot;0&quot;,&quot;00&quot;,TEXT( MINUTE(TIMEVALUE(Testing_Session_Start_Date_Time__c))) )

 &amp; &quot; &quot; &amp; TEXT(Timezone__c)  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard format Testing Start Date/Time</label>
    <type>Text</type>
</CustomField>