unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Test_conducted__c.field-meta.xml
<CustomField>
    <fullName>Test_conducted__c</fullName>
    <inlineHelpText>&quot;No (multiday event)&quot; should be used for multiday LEs different from the 1st day of the event, unless an additional test is performed for those too</inlineHelpText>
    <label>Test Conducted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (Multiday Event)</fullName>
            </value>
            <value>
                <fullName>No (Specify in reported issues)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>