unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Test_results__c.field-meta.xml
<CustomField>
    <fullName>Test_results__c</fullName>
    <inlineHelpText>Minor issues are the ones that don&#39;t compromise the success of the event if the customer doesn&#39;t address them. Major issues are the ones that must be fixed for a successful event</inlineHelpText>
    <label>Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No issues detected</fullName>
            </value>
            <value>
                <fullName>Minor issues detected</fullName>
            </value>
            <value>
                <fullName>Major issues detected</fullName>
            </value>
            <value>
                <fullName>No Test Conducted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>