unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Test_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>Test_Time_GMT__c</fullName>
    <formula>LEFT(TEXT(Preferred_date_and_time_for_testing__c),19) &amp; &quot; GMT&quot;</formula>
    <label>Test Time GMT</label>
    <type>Text</type>
</CustomField>