unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <inlineHelpText>What timezone is the event located in? Specify Start/End Time in THE SAME TIMEZONE.</inlineHelpText>
    <label>Event Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT-12:00) International Date Line West</fullName>
            </value>
            <value>
                <fullName>(GMT-11:00) Midway Island, Samoa</fullName>
            </value>
            <value>
                <fullName>(GMT-10:00) Hawaii</fullName>
            </value>
            <value>
                <fullName>(GMT-09:00) Hawaii (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-09:00) Alaska</fullName>
            </value>
            <value>
                <fullName>(GMT-08:00) Alaska (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-08:00) Pacific Time (US and Canada); Tijuana</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Pacific Time (US and Canada); Tijuana (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Arizona</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Chihuahua, Mazatlan</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Chihuahua, Mazatlan (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Mountain Time (US and Canada)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Mountain Time (US and Canada) (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Central America</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Central America (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Central Time (US and Canada)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Central Time (US and Canada) (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Guadalajara, Mexico City, Monterrey</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Guadalajara, Mexico City, Monterrey (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Saskatchewan</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Bogota, Lima, Quito</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Eastern Time (US and Canada)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Eastern Time (US and Canada) (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Indiana (East)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Indiana (East) (SUMMER TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Atlantic Time (Canada)</fullName>
            </value>
            <value>
                <fullName>(GMT-03:00) Atlantic Time (Canada) (DAYLIGHT TIME)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Caracas, La Paz</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Santiago</fullName>
            </value>
            <value>
                <fullName>(GMT-03:00) Santiago (SUMMER TIME)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>