unpackaged/main/default/objects/Live_Event_Coverage__c/fields/TXT_Coverage_End_Time__c.field-meta.xml
<CustomField>
    <fullName>TXT_Coverage_End_Time__c</fullName>
    <formula>LEFT(TEXT( Event_End_Time__c ),5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TXT Coverage End Time</label>
    <type>Text</type>
</CustomField>