unpackaged/main/default/objects/Live_Event_Coverage__c/fields/TXT_Test_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>TXT_Test_Start_Time__c</fullName>
    <formula>LEFT(TEXT( Test_Start_Time__c ),5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TXT Test Start Time</label>
    <type>Text</type>
</CustomField>