unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Type_of_Stream__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Stream__c</fullName>
    <label>Type of Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Flash</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>