unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Year_to_test__c.field-meta.xml
<CustomField>
    <fullName>Year_to_test__c</fullName>
    <inlineHelpText>The year the customer wants to test (specify date in the customers time zone)</inlineHelpText>
    <label>Year to test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>