unpackaged/main/default/objects/Live_Event_Coverage__c/validationRules/LiveEventHoursAvailableNotAvailable.validationRule-meta.xml
<ValidationRule>
    <fullName>LiveEventHoursAvailableNotAvailable</fullName>
    <active>false</active>
    <description>It&#39;s triggered If on the ACCOUNT there are not enough live event hours</description>
    <errorConditionFormula>Full_Coverage_duration_hours__c &gt;  Account__r.Live_Event_Support_hours_available__c</errorConditionFormula>
    <errorMessage>Please review the &#39;Live Event Support hours available&#39; field on the account. The amount available is not enough to cover the current request.</errorMessage>
</ValidationRule>