unpackaged/main/default/objects/Live_Event_Coverage__c/validationRules/Negative_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Duration</fullName>
    <active>false</active>
    <errorConditionFormula>Full_Event_Duration_hours__c &lt; 0 &amp;&amp;  RecordTypeId  = &quot;0126f0000014VPS&quot;</errorConditionFormula>
    <errorDisplayField>Event_End_Hour__c</errorDisplayField>
    <errorMessage>Event must end after it has started</errorMessage>
</ValidationRule>