unpackaged/main/default/objects/Live_Event_Coverage__c/listViews/Live_Events_with_Account_Name.listView-meta.xml
<ListView>
    <fullName>Live_Events_with_Account_Name</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Human_readable_Testing_Time__c</columns>
    <columns>Human_readable_Event_Start__c</columns>
    <columns>Human_readable_Event_End__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Live Events with Account Name</label>
    <language>en_US</language>
</ListView>