unpackaged/main/default/objects/Live_Event_Coverage__c/listViews/NOC_Automated_Premium.listView-meta.xml
<ListView>
    <fullName>NOC_Automated_Premium</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Event_Point_Of_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_concurrent_streams__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Live_Event_Coverage__c.X24_7_Channel_Monitoring</value>
    </filters>
    <label>NOC Automated &amp; Premium</label>
    <language>en_US</language>
    <sharedTo>
        <group>CS_Managers</group>
    </sharedTo>
</ListView>