unpackaged/main/default/objects/Live_Event_Coverage__c/listViews/Open_LEs.listView-meta.xml
<ListView>
    <fullName>Open_LEs</fullName>
    <columns>Live_Event_Coverage_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name_Text__c</columns>
    <columns>Contract_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Communication_Channel__c</columns>
    <columns>Status__c</columns>
    <columns>Off_Hours_Covered_So_Far__c</columns>
    <columns>Covered_By__c</columns>
    <columns>Human_readable_Event_Start__c</columns>
    <columns>Human_readable_Event_End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </filters>
    <label>Open LEs</label>
    <language>en_US</language>
    <sharedTo>
        <group>CS_Managers</group>
    </sharedTo>
</ListView>